# Cloudless

./: CMakeLists.txt  CMakePresets.json  README.MD
src/: Cloudless.cpp  Cloudless.h
src/navigator/: Navigator.cpp  Navigator.h  index.html
src/storage/: BinaryDirectIO.cpp  CachedFileIO.cpp  CachedFileIO.h  RecordCursor.cpp  RecordFileIO.cpp  RecordFileIO.h  RecordFileIO_allocator.cpp  RecordFileIO_freelist.cpp  RecordFileIO_header.cpp  RecordFileIO_locks.cpp  RecordFileIO_readwrite.cpp  STORAGE.MD
src/test/: CachedFileIOTest.cpp  CachedFileIOTest.h  CloudlessTests.cpp  RecordFileIOTest.cpp  RecordFileIOTest.h
src/tests/: CloudlessTests.cpp  CloudlessTests.h  RecordFileIOTest.cpp  RecordFileIOTest.h  TestCachedFileIO.cpp  TestCachedFileIO.h  TestRecordFileIO.cpp  TestRecordFileIO.h
